Add groupbox for Start From radio buttons

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -517,9 +517,10 @@ BEGIN
     EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT2,217,165,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,217,176,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,217,187,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    CONTROL         "From Snapshot",IDC_FROMSNAPSHOT_RADIO,"Button",BS_AUTORADIOBUTTON,211,107,64,10
-    CONTROL         "From Start",IDC_FROMSTART_RADIO,"Button",BS_AUTORADIOBUTTON,211,95,50,10
-    CONTROL         "From EEPROM",IDC_FROMEEPROM_RADIO,"Button",BS_AUTORADIOBUTTON,211,120,64,10
+    GROUPBOX        "Start From", IDC_STARTFROM2, 177, 88, 139, 50
+    CONTROL         "Savestate",IDC_FROMSNAPSHOT_RADIO,"Button",BS_AUTORADIOBUTTON,190,112,64,10
+    CONTROL         "Start",IDC_FROMSTART_RADIO,"Button",BS_AUTORADIOBUTTON,190,100,50,10
+    CONTROL         "EEPROM",IDC_FROMEEPROM_RADIO,"Button",BS_AUTORADIOBUTTON,190,125,64,10
 END
 
 IDD_ROM_SETTING_DIALOG DIALOGEX 0, 0, 340, 305
