--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -222,8 +222,8 @@ BEGIN
 END
 
 IDD_LUAWINDOW DIALOGEX 0, 0, 240, 166
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-CAPTION "Lua Script"
+STYLE DS_SETFONT | WS_VISIBLE | WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_SIZEBOX | WS_MINIMIZEBOX | WS_TABSTOP
+CAPTION "LUA Instance"
 FONT 8, "Ms Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Run",IDC_BUTTON_LUASTATE,193,23,40,18
