--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -118,6 +118,7 @@ BEGIN
             MENUITEM "Start Movie Playback...",     ID_START_PLAYBACK, GRAYED
             MENUITEM "Stop Movie Playback",         ID_STOP_PLAYBACK, GRAYED
             MENUITEM "Toggle Read-Only",            EMU_VCRTOGGLEREADONLY
+            MENUITEM "Toggle Loop Movie",           ID_LOOP_MOVIE
             MENUITEM SEPARATOR
             MENUITEM "Start AVI Capture...",        ID_START_CAPTURE, GRAYED
             MENUITEM "Stop AVI Capture",            ID_END_CAPTURE, GRAYED
