rsrc small readability fix

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -375,10 +375,10 @@ BEGIN
     PUSHBUTTON      "Config",IDRSPCONFIG,52,221,51,15
     PUSHBUTTON      "Test",IDRSPTEST,108,221,51,15
     PUSHBUTTON      "About",IDRSPABOUT,164,221,51,15
-    CONTROL         "",4115,"Static",SS_BITMAP,13,27,33,31,WS_EX_STATICEDGE
-    CONTROL         "",4114,"Static",SS_BITMAP,13,86,33,31,WS_EX_STATICEDGE
-    CONTROL         "",4113,"Static",SS_BITMAP,13,145,33,31,WS_EX_STATICEDGE
-    CONTROL         "",4112,"Static",SS_BITMAP,13,204,33,31,WS_EX_STATICEDGE
+    CONTROL         "",IDB_DISPLAY,"Static",SS_BITMAP,13,27,33,31,WS_EX_STATICEDGE
+    CONTROL         "",IDB_CONTROL,"Static",SS_BITMAP,13,86,33,31,WS_EX_STATICEDGE
+    CONTROL         "",IDB_SOUND,"Static",SS_BITMAP,13,145,33,31,WS_EX_STATICEDGE
+    CONTROL         "",IDB_RSP,"Static",SS_BITMAP,13,204,33,31,WS_EX_STATICEDGE
 END
 
 IDD_MESSAGES DIALOGEX 0, 0, 231, 262
