Revert "Make experimental options red"
This reverts commit 2791e054d2a793ce1d796eda75236b30a17120f8.

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -185,8 +185,8 @@ BEGIN
     CONTROL         "Show statusbar",IDC_GUI_STATUSBAR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,35,100,10
     CONTROL         "Auto Increment save slot",IDC_AUTOINCSAVESLOT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,50,100,10
     GROUPBOX        "Compatibility Options",IDC_COMPATIBILITY,7,71,215,56
-    CONTROL         "No audio delay",IDC_NO_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,16,83,78,16
-    CONTROL         "No compiled jump",IDC_NO_COMPILED_JUMP,
+    CONTROL         "No audio delay (desyncs A/V)",IDC_NO_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,16,83,78,16
+    CONTROL         "No compiled jump (EXPERIMENTAL)",IDC_NO_COMPILED_JUMP,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,16,104,78,16
     GROUPBOX        "ROM Browser Columns",IDC_ROMBROWSERCOLUMNS,7,131,215,73
     CONTROL         "Good Name",IDC_COLUMN_GOODNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,144,100,10
