--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -189,6 +189,7 @@ BEGIN
     CONTROL         "No audio delay (desyncs A/V)",IDC_NO_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,16,83,78,16
     CONTROL         "No compiled jump (EXPERIMENTAL)",IDC_NO_COMPILED_JUMP,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,16,104,78,16
+    CONTROL         "Emulate Float Crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,92,78,16
     GROUPBOX        "ROM Browser Columns",IDC_ROMBROWSERCOLUMNS,7,131,215,73
     CONTROL         "Good Name",IDC_COLUMN_GOODNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,144,100,10
     CONTROL         "Internal Name",IDC_COLUMN_INTERNALNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,158,100,10
@@ -197,7 +198,7 @@ BEGIN
     CONTROL         "Comments",IDC_COLUMN_COMMENTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,144,100,10
     CONTROL         "File Name",IDC_COLUMN_FILENAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,158,100,10
     CONTROL         "MD5",IDC_COLUMN_MD5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,172,100,10
-    GROUPBOX        "Compatibility Options",IDC_WIIVC_OPTIONS,7,207,98,50
+    GROUPBOX        "Wii Vc Options",IDC_WIIVC_OPTIONS,7,207,98,50
     CONTROL         "Round To Zero",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,221,75,10
     GROUPBOX        "Recording Options",IDC_RECORDINGOPT,112,207,110,50
     CONTROL         "Record resets",IDC_NORESET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,119,220,87,10
