--- a/winproject/mupen64/mupen64_2017.vcxproj.filters
+++ b/winproject/mupen64/mupen64_2017.vcxproj.filters
@@ -451,6 +451,9 @@
     <ClCompile Include="..\..\r4300\x86\gcop1_helpers.c">
       <Filter>Source Files\r4300\x86</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\r4300\cop1_helpers.c">
+      <Filter>Source Files\r4300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\rsrc.rc">
