--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -198,7 +198,7 @@ BEGIN
     CONTROL         "Comments",IDC_COLUMN_COMMENTS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,159,100,10
     CONTROL         "File Name",IDC_COLUMN_FILENAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,173,100,10
     CONTROL         "MD5",IDC_COLUMN_MD5,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,187,100,10
-    GROUPBOX        "Warning Options",WARNING_OPTIONS,7,222,98,44
+    GROUPBOX        "Warning Options",IDC_WARNING_OPTIONS,7,222,98,44
     CONTROL         "WiiVC Round To Zero",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,126,90,10
     GROUPBOX        "Recording Options",IDC_RECORDINGOPT,112,222,110,44
     CONTROL         "Record resets",IDC_NORESET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,235,87,10
