--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -527,6 +527,7 @@ BEGIN
     EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,217,176,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,217,187,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     GROUPBOX        "Start From",IDC_STARTFROM2,177,88,139,50
+    CONTROL         ".savestate", IDC_EXTSAVESTATE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 254, 112, 45, 10
     CONTROL         "Savestate",IDC_FROMSNAPSHOT_RADIO,"Button",BS_AUTORADIOBUTTON,190,112,64,10
     CONTROL         "Start",IDC_FROMSTART_RADIO,"Button",BS_AUTORADIOBUTTON,190,100,50,10
     CONTROL         "EEPROM",IDC_FROMEEPROM_RADIO,"Button",BS_AUTORADIOBUTTON,190,125,64,10
