--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -393,7 +393,7 @@ BEGIN
     CONTROL         "Alert for hacked ROM",IDC_ALERTHACKEDROM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,34,150,10
     CONTROL         "Alert for save errors",IDC_ALERTSAVESERRORS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,49,150,10
     GROUPBOX        "FPS / VIs",IDC_FPSTITLE,7,71,215,94
-    CONTROL         "Limit VIs (auto)",IDC_LIMITFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,86,150,10
+    CONTROL         "Limit VIs (auto)",IDC_LIMITFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,86,69,10
     CONTROL         "Use Speed Modifier",IDC_SPEEDMODIFIER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,26,100,150,10
     CONTROL         "Show FPS",IDC_SHOWFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,134,87,10
     CONTROL         "Show VIs",IDC_SHOWVIS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,149,79,10
@@ -405,6 +405,7 @@ BEGIN
     GROUPBOX        "Ini file",IDC_INIFILE,7,230,215,26
     EDITTEXT        IDC_SKIPFREQ,162,138,45,12,ES_AUTOHSCROLL
     LTEXT           "Fast forward skip frequency:",IDC_STATIC,108,133,49,19
+    CONTROL         "0-index statusbar",IDC_0INDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,144,86,69,10
 END
 
 IDD_MOVIE_PLAYBACK_DIALOG DIALOGEX 0, 0, 342, 330
@@ -528,7 +529,7 @@ BEGIN
     EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,217,176,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,217,187,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     GROUPBOX        "Start From",IDC_STARTFROM2,177,88,139,50
-    CONTROL         ".savestate", IDC_EXTSAVESTATE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 254, 112, 45, 10
+    CONTROL         ".savestate",IDC_EXTSAVESTATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,254,112,45,10
     CONTROL         "Savestate",IDC_FROMSNAPSHOT_RADIO,"Button",BS_AUTORADIOBUTTON,190,112,64,10
     CONTROL         "Start",IDC_FROMSTART_RADIO,"Button",BS_AUTORADIOBUTTON,190,100,50,10
     CONTROL         "EEPROM",IDC_FROMEEPROM_RADIO,"Button",BS_AUTORADIOBUTTON,190,125,64,10
