TASStudio bigger changes to everything

--- a/winproject/mupen64/mupen64_2017.vcxproj
+++ b/winproject/mupen64/mupen64_2017.vcxproj
@@ -729,6 +729,7 @@
     </ClCompile>
     <ClCompile Include="..\..\lua\LuaConsole.cpp" />
     <ClCompile Include="..\..\main\win\tasstudio.cpp" />
+    <ClCompile Include="ops_helper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\rsrc.rc" />
