--- a/winproject/mupen64/mupen64_2017.vcxproj.filters
+++ b/winproject/mupen64/mupen64_2017.vcxproj.filters
@@ -480,6 +480,9 @@
     <ClCompile Include="..\..\library\BabyGrid.cpp">
       <Filter>Source Files\library</Filter>
     </ClCompile>
+    <ClCompile Include="ops_helper.cpp">
+      <Filter>Source Files\main\helper</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\rsrc.rc">
