TAS Studio more changes

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -591,7 +591,7 @@ STYLE WS_POPUP | WS_VISIBLE | WS_CAPTION
 CAPTION ""
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-PUSHBUTTON      "Refresh", IDC_REBUILD, 250, 166, 50, 14
+PUSHBUTTON      "Build", IDC_REBUILD, 250, 166, 50, 14
 PUSHBUTTON      "Close", IDC_CLOSETASSTUDIO, 200, 166, 50, 14
 LTEXT           "Dame tu cosita", IDC_TASSTUDIOSTAT, 6, 168, 180, 8
 END
