Add AVI lag frame recording option, "Stop at" option, major rework of GUI in avi encoding dialog

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -597,7 +597,7 @@ LTEXT           "Dame tu cosita", IDC_TASSTUDIOSTAT, 6, 168, 180, 8
 END
 
 IDD_AVICONFIGDIALOG DIALOGEX 0, 0, 341, 90
-STYLE WS_POPUP | WS_VISIBLE | WS_CAPTION
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "AVI Encoding"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
@@ -606,6 +606,10 @@ PUSHBUTTON      "Cancel", IDCANCEL, 285, 70, 50, 14
 GROUPBOX        "AVI Encoding Options", IDC_AVIGP, 6, 6, 329, 59
 CONTROL         "Max speed encoding (Uncap emulator speed limits when encoding)", IDC_AVI_FASTENCODE,
 "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 17, 19, 234, 10
+CONTROL         "Record lag frames", IDC_AVI_LAGSKIP,
+"Button", BS_AUTOCHECKBOX | WS_TABSTOP, 17, 41, 234, 10
+EDITTEXT        IDC_AVIREC_STOPATTXT, 50, 30, 100, 10, ES_AUTOHSCROLL | WS_BORDER
+LTEXT           "Stop At", IDC_AVIREC_STOPATLBL, 17, 31, 30, 8
 PUSHBUTTON      "Codec Config", IDC_CONFIGUREAVICODEC, 168, 70, 65, 14
 PUSHBUTTON      "Choose Path", IDC_CONFIGUREAVIPATH, 100, 70, 65, 14
 END
