Add Lua simplified dialog option, and lua warn at close

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -215,6 +215,15 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,16,233,78,16
 END
 
+IDD_OTHER_OPTIONS_DIALOG DIALOGEX 0, 0, 231, 273
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
+FONT 8, "Tahoma", 0, 0, 0x0
+BEGIN
+GROUPBOX        "Other Options", IDC_OTHEROPTIONS, 7, 7, 215, 60
+CONTROL         "Ask on lua close", IDC_LUA_WARNONCLOSE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 20, 100, 10
+CONTROL         "Simplfied lua dialog", IDC_LUA_SIMPLEDIALOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 30, 100, 10
+END
+
 IDD_AUDIT_ROMS_DIALOG DIALOGEX 0, 0, 183, 138
 STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Audit ROMs"
@@ -249,6 +258,18 @@ BEGIN
     PUSHBUTTON      "Stop",IDC_BUTTON_LUASTOP,151,23,40,18,WS_DISABLED
     EDITTEXT        IDC_TEXTBOX_LUACONSOLE,7,43,226,116,ES_MULTILINE | ES_READONLY | WS_VSCROLL
 END
+
+IDD_LUAWINDOW_SIMPLIFIED DIALOGEX 0, 0, 230, 50
+STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+CAPTION "LUA Instance"
+FONT 8, "Ms Shell Dlg", 0, 0, 0x1
+BEGIN
+PUSHBUTTON      "Run", IDC_BUTTON_LUASTATE, 193, 23, 40, 18
+EDITTEXT        IDC_TEXTBOX_LUASCRIPTPATH, 7, 7, 226, 14, ES_AUTOHSCROLL
+PUSHBUTTON      "Browse", IDC_BUTTON_LUABROWSE, 110, 23, 40, 18
+PUSHBUTTON      "Stop", IDC_BUTTON_LUASTOP, 151, 23, 40, 18, WS_DISABLED
+END
+
 
 IDD_DIRECTORIES DIALOGEX 0, 0, 231, 262
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
@@ -663,6 +684,10 @@ BEGIN
     END
 
     IDD_ADVANCED_OPTIONS, DIALOG
+    BEGIN
+    END
+
+    IDD_OTHER_OPTIONS_DIALOG, DIALOG
     BEGIN
     END
 
