Very many things and changes

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -126,6 +126,7 @@ BEGIN
         END
         MENUITEM SEPARATOR
         MENUITEM "Start &Trace Logger...",      ID_TRACELOG
+        MENUITEM "Save Config",                 ID_FORCESAVE
     END
     POPUP "Help"
     BEGIN
