Add debug-only button to show crash dialog

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -132,6 +132,7 @@ BEGIN
     POPUP "Help"
     BEGIN
         MENUITEM "Show RAM Start",              ID_RAMSTART
+        MENUITEM "Crash Handler",               ID_CRASHHANDLERDIALOGSHOW, GRAYED
         MENUITEM SEPARATOR
         MENUITEM "&About Mupen64...",           ID_HELP_ABOUT
     END
